@@ -21,6 +21,7 @@ argparse = "0.2"
 [target."cfg(unix)".dependencies]
 nix = "0.11"
 bitflags = "0.9"
+cfg-if = "0.1.4"
 
 [target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
 libudev = "0.2.0"
