@@ -8,6 +8,8 @@ and this project adheres to http://semver.org/[Semantic Versioning].
 === [UNRELEASED]
 ==== Added
 
+* Added `bytes_to_read`, `bytes_to_write` and `clear` to `SerialPort`, including example scripts.
+
 ==== Changed
 
 ==== Fixed
